
ChangeLog
 [ + added, - removed, * changed ]
 + 08Jul2015 Imported first bits for sionlib
 * 25Jun2015 Fix crash when temporal dir != final dir and their shared
               characteristics differ.
             Fix compilation into a separate directory.
             Fix installation from a separate building directory.
 * 23Jun2015 Add initial PEBS sampling support
             Split sampling files into src/tracer/sampling
 * 17Jun2015 Fix extrae command line, lack of thread init
 * 12Jun2015 Do not invoke MPI_* routines when initializing Extrae but MPI
             is not present (as in MPI+OmpSs).
 * 04Jun2015 Sanitized environment variables, in particular LD_LIBRARY_PATH
             Added extrae-test-dyninst tool to check DynInst functionality
             Annotate the node name in the .mpit file to avoid file collisions
             Extend Java documentation
 * 25May2015 Extrae 3.1.0 released
 * 25May2015 Fixes for bootstrapping, changed into autoreconf.
             Added libxml2's m4 file into config/
 * 20May2015 Fujitsu compiler does not have -Wall or similar flag 
 * 05May2015 Fixes for K computer
 * 28Apr2015 papi_best_set cannot support 64 or more counters 
 * 27Apr2015 Fixed Makefile rules for the pyextrae script. It is now
             installed in libexec instead of lib.
             Support for MPI_UNDEFINED in mpi_stats & filtering
             Promoted usage of stat instead of open+read to check for shared
               dirs among MPI processes
 * 23Apr2015 Upgrade to 3.1.0rc
             Missing MPI+OpenMP example installation
             Improve directory construction on shared disks
             Shorten labels related to user source code references
             Change format for performance counters labels
 * 22Apr2015 Fix timings for first mode & hardware counter events
             Fix compilation in IBM ppc when --disable-openmp-gnu is given
             Make Extrae_user_function use the same parameters